Added the option to start a Local Multiplayer game with the auto_menu parameter.