@@ -66,8 +66,12 @@ public class WindowsTools {
   public static void startChaoslauncher(String race, String map, String scDir, String autoMenu,
       String enemyRace) throws IOException {
     populateInitFile(race, map, scDir, autoMenu, enemyRace);
-    Runtime.getRuntime().exec(scDir + "\\Chaoslauncher\\Chaoslauncher.exe", null,
-        new File(scDir + "\\Chaoslauncher\\"));
+    if(autoMenu.toLowerCase().equals("lan"))
+    	Runtime.getRuntime().exec(new String[] {scDir + "\\Chaoslauncher\\Chaoslauncher - MultiInstance.exe"}, null,
+    	        new File(scDir + "\\Chaoslauncher\\"));
+    else
+    	Runtime.getRuntime().exec(scDir + "\\Chaoslauncher\\Chaoslauncher.exe", null,
+    			new File(scDir + "\\Chaoslauncher\\"));
   }
 
   private static void populateInitFile(String race, String map, String scDir, String autoMenu,
@@ -96,6 +100,9 @@ public class WindowsTools {
 
     iniFile += "[auto_menu]" + newLine;
     iniFile += "auto_menu = " + autoMenu + newLine + newLine;
+    
+    if(autoMenu.toLowerCase().equals("lan"))
+    	iniFile += "lan_mode = local pc" + newLine + newLine;
 
     iniFile += "pause_dbg = OFF" + newLine + newLine;
 
